# 82edge_osiris

./: .coverage  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  00-wip.patch  Dockerfile  Dockerfile.watchdog  LICENSES.json  LICENSES.md  Makefile  README.md  audio_loopback.py  check_imports.py  constraints.txt  constraints_cpu.txt  coverage.xml  docker-compose.yml  live_transcribe.py  mkdocs.yml  mypy.ini  osiris  pyproject.toml  pytest.ini  record_playback.py  requirements-azr-runtime.txt  requirements-azr-tests.txt  requirements-ci.txt  requirements-core.in  requirements-core.txt  requirements-dev-lock.txt  requirements-dev.in  requirements-dev.txt  requirements-dgm-tests.txt  requirements-docs.txt  requirements-lock.txt  requirements-ml.txt  requirements-tests.txt  requirements-torch.txt  requirements-voice.txt  (+10 more)
.devcontainer/: devcontainer.json
.github/: actionlint.yml
.venv-win/: pyvenv.cfg
advisor/: risk_gate.py
backend/: requirements-backend.txt
chatterbox/: __init__.py
common/: otel_init.py
dgm_kernel/: README.md  hitl_pr.py  llm_client.py  meta_loop.py  prover.py
docker/: Dockerfile  azr-planner.Dockerfile  compose.yaml  dgm-kernel.Dockerfile  docker-compose.cloud.yaml  docker-compose.yml  server.py
docs/: ADVANCED_TROUBLESHOOTING.md  ARCH.md  COOKBOOK.md  DAY2_OPERATIONS.md  DEV_GUIDE.md  LLM_ROSTER.md  LOAD_TESTING.md  LOCAL_HARNESS.md  PROD_DB_STRATEGY.md  PROJECT_OVERVIEW.md  SECURITY_SECRETS.md  TECH_DEBT.md  arch_v2_description.txt  feedback_loop.md  index.html  observability.md  openapi.json  openapi.md  quality_loop.md
llm_sidecar/: __init__.py  db.py  event_bus.py  hermes_plugin.py  loader.py  redis_bus.py  reward.py  tts.py
nightly_trainer/: README.md  driver.py
osiris/: __init__.py  llm_client.py  server.py
osiris.egg-info/: SOURCES.txt  top_level.txt
osiris_policy/: Dockerfile  __init__.py  orchestrator.py
outlines/: __init__.py  generate.py
peft/: __init__.py
research/: __init__.py
resources/: dummy_patch.py.txt
scripts/: chaos_disk_fill.py  chaos_network_impair.py  chaos_report.py  chaos_restarts.py  check_dev_env.py  ci_check_advice.py  ci_tick_publisher.py  fetch_phi3.sh  generate_licenses.py  generate_openapi.py  harvest_feedback.py  mic.py  mic_record.py  mic_test.py  migrate_feedback.py  migrate_lancedb_20250604.py  (+7 more)
(+454 files in other folders)
