[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osiris"
version = "0.0.0"

# --- Setuptools Configuration ---
# This combination explicitly tells setuptools that the package's root ("")
# is located in the 'src' directory, AND to automatically find all packages
# within that 'src' directory. This is the definitive setup for a src-layout.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- Pytest Configuration ---
[tool.pytest.ini_options]
minversion = "6.0"
# We explicitly tell pytest to only look for tests in the 'tests' directory.
testpaths = ["tests"]
# We do NOT use 'pythonpath'. The editable install now handles the path correctly.
# 'asyncio_mode = "auto"' is the modern way to configure pytest-asyncio.
asyncio_mode = "auto"

# --- Formatter and Linter Configurations ---
[tool.black]
line-length = 88
target-version = ["py310"]
required-version = "24.2.0"

[tool.ruff]
target-version = "py310"
line-length = 88
required-version = "0.4.4"
exclude = ["osiris/scripts/*"]

[tool.ruff.lint]
select = ["E9"]

# --- Release Configuration ---
[tool.semantic_release]
version_variable = "pyproject.toml:version"
tag_format = "v{version}"
